tests/errors/bare-elif.knv
fn main() -> void {
    elif 1 == 1 {
        exit 1;
    }
    exit 0;
}
